--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,14 +12,14 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
+    - name: Set up JDK 1.8
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '1.8'
         distribution: 'adopt'
         cache: maven
     - name: Build with Maven
